# bfcompiler

./: .gitignore  CMakeLists.txt
bf2elfx64/: CMakeLists.txt  bf2elfx64.cpp
bf2elfx86/: CMakeLists.txt  bf2elfx86.cpp
bf2pex64/: CMakeLists.txt  bf2pex64.cpp
bf2pex86/: CMakeLists.txt  bf2pex86.cpp
